Style: change main button name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Contador de Cliques</h1>
       <p id="counter">0</p>
-      <button onclick="increment()">Clique aqui!</button>
+      <button onclick="increment()">Clique Me!</button>
     </div>
     <script src="script.js"></script>
   </body>
